lilv (0.24.5) unstable;

  * Fix GCC8 warnings
  * Fix creating directories across drives on Windows

 -- David Robillard <d@drobilla.net>  Tue, 04 Sep 2018 21:02:19 +0200

lilv (0.24.4) stable;

  * Fix saving state when broken links are encountered
  * Don't attempt to load remote or non-Turtle files
  * lv2apply: Activate plugin before running
  * lv2apply: Use default values when they are not nan
  * lv2bench: Improve support for plugins with sequence ports
  * lv2bench: Support running a single plugin given on the command line
  * Gracefully handle plugins with missing binary URIs
  * Remove use of deprecated readdir_r
  * Install Python bindings when configured without tests
    (thanks Clement Skau)

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 20:42:00 +0200

lilv (0.24.2) stable;

  * Fix saving state to paths that contain URI delimiters (#, ?, etc)
  * Fix comparison of restored states with paths

 -- David Robillard <d@drobilla.net>  Wed, 04 Jan 2017 11:48:08 -0500

lilv (0.24.0) stable;

  * Add new hand-crafted Pythonic bindings with full test coverage
  * Add lv2apply utility for applying plugins to audio files
  * Add lilv_world_get_symbol()
  * Add lilv_state_set_metadata() for adding state banks/comments/etc
    (based on patch from Hanspeter Portner)
  * Fix crash when state contains non-POD properties
  * Fix crash when NULL predicate is passed to lilv_world_find_nodes()
  * Fix state file versioning
  * Unload contained resources when bundle is unloaded
  * Do not instantiate plugin when data fails to parse
  * Support re-loading plugins
  * Replace bundles if bundle with newer plugin version is loaded
    (based on patch from Robin Gareus)
  * Fix loading dyn-manifest from bundles with spaces in their path
  * Check lv2:binary predicate for UIs
  * Add LILV_URI_ATOM_PORT and LILV_URI_CV_PORT defines
  * Fix documentation installation
  * Fix outdated comment references to lilv_uri_to_path()
